--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -322,10 +322,10 @@
         ***********************************-->
         <div class="footer">
             <div class="copyright">
-                <p>Copyright &copy; Designed & Developed by <a href="https://themeforest.net/user/quixlab">Bao Ngo Le
-                        Gia</a> 2024</p>
-                <h1>@Url.Content("~/js/settings.js")</h1>
-
+                <p>Copyright &copy; Designed & Developed by 
+                    <a href="https://themeforest.net/user/quixlab">
+                    Bao Ngo Le Gia</a> 2024
+                </p>
             </div>
         </div>
         <!--**********************************
