--- a/Areas/MaintenanceAndIncident/Views/MaintenanceAndIncident/Index.cshtml
+++ b/Areas/MaintenanceAndIncident/Views/MaintenanceAndIncident/Index.cshtml
@@ -13,14 +13,13 @@
                                 <div class="status-info mb-2">
                                     <select id="room-status" class="form-select input-height"
                                         aria-label="Chọn trạng thái phòng">
-                                        <option value="all">Room status</option>
-                                        <option value="available">Available </option>
-                                        <option value="abouttoexpire">About to expire</option>
-                                        <option value="rented">Rented</option>
+                                        <option value="all"> All Maintenance</option>
+                                        <option value="requested">Requested </option>
+                                        <option value="proccessed">Proccessed</option>
                                     </select>
                                     <!-- Room Number Field -->
                                     <input class="input-height input-room" type="text" id="room-number"
-                                        placeholder="Enter number room" aria-label="Nhập số phòng">
+                                        placeholder="Enter description" aria-label="Nhập số phòng">
                                     <!-- Search Button -->
                                     <a href="#" class="btn btn-primary btn-custom me-2">
                                         <i class="fas fa-search"></i>
@@ -28,14 +27,7 @@
                                     </a>
                                 </div>
                                 <div class="action-buttons mb-2">
-                                    <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
-                                        <i class="fas fa-plus"></i>
-                                        Add home
-                                    </a>
-                                    @* <a href="#" class="btn btn-info me-2">
-                                <i class="fas fa-edit"></i>
-                                Enter room from excel
-                                </a> *@
+                                    @* Generate code here *@
                                 </div>
                             </div>
                         </div>
@@ -48,84 +40,39 @@
                 <div class="col-lg-12">
                     <div class="card ">
                         <div class="card-header">
-                            <ul class="nav nav-tabs card-header-tabs">
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">87 - Hoàng Diệu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">139 - Trường Trinh</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
-                                </li>
+                            <ul class="nav nav-tabs card-header-tabs" id="tab-list">
+                                @* Render code here *@
                             </ul>
                         </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                                <div class="status-info mb-2">
-                                    <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span>
+                                <div class="status-info mb-2" id="status-info">
+                                    @* Generate code here *@
                                 </div>
-                                <div class="action-buttons mb-2">
-                                    <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
-                                        <i class="fas fa-plus"></i> Add room
-                                    </a>
-                                    <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
-                                        <i class="fas fa-edit"></i> Update home
-                                    </a>
-                                    @* <a href="#" class="btn btn-danger ">
-                                <i class="fas fa-trash"></i> Delete home
-                                </a> *@
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-bordered zero-configuration">
-                                        <thead>
-                                            <tr>
-                                                <th>Incident ID</th>
-                                                <th>Asset ID</th>
-                                                <th>Description</th>
-                                                <th>Incident Date</th>
-                                                <th>Resolution Date</th>
-                                                <th>Status</th>
-                                                <th>Assigned To</th>
-                                                <th>Maintenance Cost (VND)</th> <!-- Cột chi phí bảo trì -->
-                                                <th>Asset Condition</th> <!-- Cột tình trạng thiết bị -->
-                                                <th>Actions</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>INC001</td>
-                                                <td>A001</td>
-                                                <td>Power failure in the computer.</td>
-                                                <td>01/02/2024</td>
-                                                <td>01/02/2024</td>
-                                                <td>Resolved</td>
-                                                <td>John Doe</td>
-                                                <td>500,000</td> <!-- Chi phí bảo trì -->
-                                                <td>Broken</td> <!-- Tình trạng thiết bị -->
-                                                <td>
-                                                    <span>
-                                                        <a asp-controller="Incident" asp-action="EditIncident"
-                                                            asp-route-id="1" data-toggle="tooltip" data-placement="top"
-                                                            title="Edit">
-                                                            <i class="fa fa-pencil color-muted m-r-5"></i>
-                                                        </a>
-                                                        <a href="#basicModal" data-toggle="modal" title="Remove">
-                                                            <i class="fa fa-close color-danger"></i>
-                                                        </a>
-                                                    </span>
-                                                </td>
-                                            </tr>
-                                            <!-- Add more rows as needed -->
-                                        </tbody>
-                                    </table>
+                                <div class="action-buttons mb-2" id="btn-action">
+                                    @* Generate code here *@
                                 </div>
                             </div>
-                            <hr />
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered zero-configuration text-center"
+                                    id="maintenance-list">
+                                    <thead>
+                                        <tr>
+                                            <th>No.</th>
+                                            <th>Asset name</th>
+                                            <th>Description</th>
+                                            <th>Incident Date</th>
+                                            <th>Position</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @* Render code here *@
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
+                        <hr />
                     </div>
                 </div>
             </div>
@@ -159,11 +106,21 @@ else
 @section AdditionalLinkCSS {
     <link href="../css/site.css" rel="stylesheet">
     <link href="../plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <style>
+        #maintenance-list_wrapper {
+            padding: 0px !important;
+        }
+
+        /* Show the first row if it exists */
+        div.table-responsive>div.dataTables_wrapper>div.row:first-child {
+            display: none !important;
+        }
+    </style>
 }
 
 @* Link Javascript*@
 @section AdditionalLinkJavascript {
-    <script src="../js/room/room.js"></script>
+    <script src="../js/maintenance-and-incident/maintenance-and-incident.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../plugins/tables/js/jquery.dataTables.min.js"></script>
     <script src="../plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
